# cyber-physical-systems

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  calculated-steering-angle.csv  code-of-conduct.md
HeaderFiles/: PrimeChecker.hpp
SourceFiles/: CMakeLists.txt  PrimeChecker.cpp  main.cpp
src/: SteeringCalculation.py  opendlv-video-hsv-inspector.cpp  template-opencv.cpp
tests/: CMakeLists.txt  TestPrimeChecker.cpp
